--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="content">
             <div class="container mt-5">
-                <h1 class="text-center">Casa de Câmbio XPTO</h1>
+                <h1 class="text-center">Casa de Câmbio</h1>
                 <form id="cambioForm">
                     <div class="form-row">
                         <div class="form-group col-md-4">
@@ -46,11 +46,9 @@
         </div>
     </div>
 
-   
-
-    <!-- Adicione os scripts do Bootstrap e seus próprios scripts JavaScript aqui -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="/assets/js/script.js"></script>
 </body>
 </html>
